# CS385cpp

./: .env  .gitignore  CMakeLists.txt  CS385 PORJ1 report.md  Makefile  Makefile_bac  README.md  fisherMain  fisherMain.cpp  generageDataset.sh  hogCalculate  hogCalculate.cpp  hogOutVisualize  hogOutVisualize.cpp  hogVisualize  hogVisualize.cpp  logisticMain  logisticMain.cpp  processImage  processImage.cpp
cnn/: basicOps.cpp  basicOps.h  layers.cpp  layers.h  operator.h  readme.md  tensor.cpp  tensor.h
dataset/: matrix_dataset.cpp  matrix_dataset.h
fisher/: fisher.cpp  fisher.h
logistic/: logistic.cpp  logistic.h
protobuf/: dataset.hog.pb.cc  dataset.hog.pb.h  dataset.hog.proto  reader  reader.cc  writer  writer.cc
protobuf/dataset/: hog_pb2.py
python/: CNN.py  README.md  SVM.ipynb  SVM.py  embeding_main.py  embeding_main_little.py  faceDection.py  logistic_clf.pkl
python/.ipynb_checkpoints/: SVM-checkpoint.ipynb
test/: fisherMain.cpp  layertest.cpp  logisticMain  logisticMain.cpp  operatorTest.cpp  test_dataset_main  test_dataset_main.cpp  testconv.cpp
